2007-10-28  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-system-monitor, libwnck, gnome-desktop,
	gnome-menus, gnome-panel, gnome-session branched for 2.20.

2007-10-25  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: accerciser branched for 2.20.

2007-10-24  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* people.xml.in: Add Eitan Isaacson as maintainer of accerciser.

2007-10-21  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Seán de Búrca is the new Irish (ga) team
	leader.

2007-10-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: gdm2 renamed to gdm.
	* releases.xml.in: Added new release GNOME 2.22.

2007-10-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module paperbox. vino, gnome-themes,
	deskbar-applet branched for 2.20.

2007-10-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module gnome-packagekit.
	gnome-volume-manager branched for 2.20.
	* templates/language-release.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/team.tmpl: Removed superfluous img alt attribute content
	on counsel of fredp.

2007-10-11  Claude Paroz  <claude@2xlibre.net>

	* data/main.css: Adapted styles to manage 'maintainer' icons.
	* templates/language-release.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/team.tmpl: Put 'maintainer' icons in <img> tag instead of
	background with style.

2007-10-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: libgnomecanvas and evince branched for 2.20.

2007-10-10  Claude Paroz  <claude@2xlibre.net>

	* templates/header.tmpl: Translatable strings corrected.

2007-10-10  Claude Paroz  <claude@2xlibre.net>

	* templates/header.tmpl: Corrected '#end if'.
