@@ -1473,7 +1473,8 @@
         </document>
       </branch>
     </defaults>
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="silky">
