@@ -528,7 +528,7 @@
       <module id="nautilus" branch="gnome-2-20"/>
       <module id="nautilus-cd-burner"/>
       <module id="orca" branch="gnome-2-20"/>
-      <module id="seahorse"/>
+      <module id="seahorse" branch="gnome-2-20"/>
       <module id="sound-juicer"/>
       <module id="tomboy" branch="gnome-2-20"/>
       <module id="totem" branch="gnome-2-20"/>
