@@ -1,3 +1,8 @@
+2007-10-29  Johannes Schmid <jhs@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: seahorse branched for 2.20
+
 2007-10-28  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
